--- a/styles/main.css
+++ b/styles/main.css
@@ -137,4 +137,11 @@ li{
 
 a{
     text-decoration: none;
+    color: black;
+    padding: 10px;
+    margin-right: 5px;
+}
+
+a:hover{
+    color: white;
 }
