--- a/styles/Metodos.css
+++ b/styles/Metodos.css
@@ -5,7 +5,7 @@
     margin: inherit;
     font: Helveltica;
     font-style: italic; 
-    color: black;   
+    color: rgba(2, 18, 213);   
     background-color: rgba(32, 188, 113, 0.15);
    	
         }
@@ -26,7 +26,7 @@
      
         a{
             text-decoration: none;
-            color: black;
+            color:  rgba(2, 18, 213);
             padding: 10px;
             margin-right: 5px;
         }
